# mon_service

./: .gitignore  CMakeLists.txt  microservice.cc  mon_service.cc
client/: CMakeLists.txt
client/include/: statsclient.h
client/src/: statsclient.cc
protos/: CMakeLists.txt  stats_server.proto
server/: CMakeLists.txt
server/include/: statsserver.h
server/src/: statsserver.cc
